--- a/data.ipynb
+++ b/data.ipynb
@@ -5791,13 +5791,20 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.8",
+   "version": "3.9.6",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -5809,10 +5816,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.9.6 64-bit"
   },
   "interpreter": {
-   "hash": "bce03e0203ca6d29490e03d392228e90828a57ede4d3c15fe8f3c680f7829612"
+   "hash": "c36b75ead49fede5ca4c7f5a618ce1e3bfb4b3a0f4512cc32c001d2e83619906"
   }
  },
  "nbformat": 4,
